src/passes/02-parsing/jsligo/Tests/contracts/negative/pattern_match3.jsligo
let test_foo = (x : test_exec_result) : string => {
  match(x, {
    Success: (_) => "",
    Failure: (_) => ""
  });
}
